# alfred-random

./: Cargo.toml  readme.md  随机0.1.alfredworkflow
src/: main.rs  random.rs  workflow.rs
