[package]
name = "random-helper"
version = "0.1.0"
edition = "2021"
authors = ["PeiXy_J<peixy_j@163.com>"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
